BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Meeting_Speaker_BMS__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Meeting Speakers</relationshipLabel>
        <relationshipName>Meeting_Speakers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Cost_BMS_EMEA__c</fullName>
        <description>BMS ACN - December 2015 (Q4 GRM) : If a speaker does not deliver, or delivers partially, a service, total cost will be calculated on basis of &quot;Additional cost&quot; entered by the rep.</description>
        <label>Additional Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address_Line_1_BMS_IC__c</fullName>
        <label>Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_to_subtract_BMS_EMEA__c</fullName>
        <description>VPRO EMEA Aug-2014: field for German, to subtract an amount from the calculated Honoriarium costs. Rationale: real costs agreed with the HCP could differ from the &quot;theoretical&quot; ones.</description>
        <label>Amount to subtract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMS_EMEA_Account_Source_Country__c</fullName>
        <description>VPRO August 2014: Custom field to populate the Country based om the country of the HCP. Workflow will populate the value</description>
        <label>Account Source Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Briefing_mins_BMS_EMEA__c</fullName>
        <description>BMS EMEA - Feb Mini LRM 2017 : New Field to Meeting Speaker to calculate the Breakdown of the Estimated Duration of Service. To be entered by user in Minutes.</description>
        <label>Briefing (mins)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chairing_mins_BMS_EMEA__c</fullName>
        <description>BMS EMEA - Feb Mini LRM 2017 : New Field to Meeting Speaker to calculate the Breakdown of the Estimated Duration of Service. To be entered by user in Minutes.</description>
        <label>Chairing (mins)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City_BMS_IC__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_BMS_IC__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compensated_Travel_Time_hrs_BMS_EMEA__c</fullName>
        <description>VPRO March 2014: Meeting Speaker Information.</description>
        <label>Compensated Travel Time (hrs)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DHG_Comment_BMS_EMEA__c</fullName>
        <description>VPRO Nov 2013: field specific to Germany.</description>
        <label>DHG Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DHG_Document_BMS_EMEA__c</fullName>
        <description>VPRO Nov 2013: specific field for Germany.</description>
        <label>DHG Document</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHG_is_required_BMS_EMEA__c</fullName>
        <description>VPRO Nov 2013: field specific to Germany.</description>
        <label>DHG is required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivered_BMS_EMEA__c</fullName>
        <description>Req 818: If the Speaker meeting was delivered.</description>
        <label>Delivered</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Duration_of_Service_hrs__c</fullName>
        <description>VPRO March 2014: Meeting Speaker Information.</description>
        <label>Estimated Duration of Service (hrs)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Preparation_Time_hrs_BMS_EMEA__c</fullName>
        <description>VPRO March 2014: Meeting Speaker Information.</description>
        <label>Estimated Preparation Time (hrs)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID_BMS_SHARED__c</fullName>
        <description>VPRO EMEA May 2014: field to be used for data loading</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Has_Rate_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Rate Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate_BMS_EMEA__c</fullName>
        <description>VPRO Nov 2013: Speaker hourly rate. Created as a number field and not currency.</description>
        <inlineHelpText>In alignment with Fair Market (see Appendix A)</inlineHelpText>
        <label>Hourly Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hourly_honorarium_rate_BMS_EMEA__c</fullName>
        <description>VPRO March 2014: Information for Meeting Speaker</description>
        <inlineHelpText>In alignment with Fair Market (see Appendix A)</inlineHelpText>
        <label>Hourly honorarium rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hourly_travel_time_rate_BMS_EMEA__c</fullName>
        <description>VPRO March 2014: Meeting Speaker Information.</description>
        <label>Hourly travel time rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_to_Account_BMS_EMEA__c</fullName>
        <description>Req 818 Sw 18-Feb: if the Invoice has been sent to Accounting</description>
        <label>Invoice to Account</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lock_Rate_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Rate Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Start_Date_BMS_EMEA__c</fullName>
        <description>BMS ACN: April 2017 - Field to display Meeting Start Date in the Meeting Speaker Related List on the Customer Card</description>
        <formula>Meeting__r.Start_Date_vod__c</formula>
        <label>Meeting Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Meeting</label>
        <referenceTo>Medical_Event_vod__c</referenceTo>
        <relationshipLabel>Meeting Speakers</relationshipLabel>
        <relationshipName>Meeting_Speakers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_hours_BMS_EMEA__c</fullName>
        <description>VPRO Nov 2013: number of hours of the Speaker.</description>
        <label>Number of hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Fees_BMS_EMEA__c</fullName>
        <description>VPRO Nov 2013: extra fees that are not counted as hourly rates.</description>
        <inlineHelpText>Honoraria paid for travel time, honoraria paid for preparation Time,  as per Appendix A – add detail breakdown in the comments</inlineHelpText>
        <label>Other Fees</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_mins_BMS_EMEA__c</fullName>
        <description>BMS EMEA - Feb Mini LRM 2017 : New Field to Meeting Speaker to calculate the Breakdown of the Estimated Duration of Service. To be entered by user in Minutes.</description>
        <label>Other (mins)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_code_BMS_EMEA__c</fullName>
        <description>VPRO Nov 2013: Purchase Order for the Speaker contract.</description>
        <label>PO code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payable_To_BMS_IC__c</fullName>
        <description>Cheque Payable To</description>
        <label>Payable To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Expenses_BMS_IC__c</fullName>
        <description>Planned expenses for the speaker rate card</description>
        <label>Planned Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Post_Meeting_Debrief_mins_BMS_EMEA__c</fullName>
        <description>BMS EMEA - Feb Mini LRM 2017 : New Field to Meeting Speaker to calculate the Breakdown of the Estimated Duration of Service. To be entered by user in Minutes.</description>
        <label>Post Meeting Debrief (mins)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postal_Code_BMS_IC__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_mins_BMS_EMEA__c</fullName>
        <description>BMS EMEA - Feb Mini LRM 2017 : New Field to Meeting Speaker to calculate the Breakdown of the Estimated Duration of Service. To be entered by user in Minutes.</description>
        <label>Presentation (mins)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Province_BMS_IC__c</fullName>
        <label>Province</label>
        <picklist>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q_and_A_mins_BMS_EMEA__c</fullName>
        <description>BMS EMEA - Feb Mini LRM 2017 : New Field to Meeting Speaker to calculate the Breakdown of the Estimated Duration of Service. To be entered by user in Minutes.</description>
        <label>Q and A (mins)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Planned_Expenses__c</fullName>
        <description>Planned expenses for rate card without miscellaneous expenses</description>
        <label>Rate Card Planned Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Card</label>
        <referenceTo>Rate_Card__c</referenceTo>
        <relationshipLabel>Meeting Speakers</relationshipLabel>
        <relationshipName>Meeting_Speakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_BMS_CA__c</fullName>
        <description>Used to identify if the person added to the Meeting is a Speaker, Moderator or Corporate Support</description>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Checque_To_BMS_IC__c</fullName>
        <label>Send Cheque To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Specialty__c</fullName>
        <formula>Account__r.Specialty_BMS_EMEA__r.Name</formula>
        <label>Speaker Specialty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_BMS_EMEA__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Attend</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_BMS_EMEA__c</fullName>
        <description>VPRO Nov 2013: Total of fees (hourly rates + other fees).
BMS ACN - September 2015: Formula modified so that if the serivice is not delivered (Delivered = No), Total should be 0, else Total of fees (hourly rates + other fees).
BMS ACN - December 2015 (Q4 GRM) : Formula modified so that if the service is not delivered (Delivered = No) , then Total = Additional Costs.</description>
        <formula>IF(ISPICKVAL(Delivered_BMS_EMEA__c, &quot;No&quot;),Additional_Cost_BMS_EMEA__c,Hourly_honorarium_rate_BMS_EMEA__c * Estimated_Duration_of_Service_hrs__c + Hourly_honorarium_rate_BMS_EMEA__c * Estimated_Preparation_Time_hrs_BMS_EMEA__c + Hourly_travel_time_rate_BMS_EMEA__c * Compensated_Travel_Time_hrs_BMS_EMEA__c - Amount_to_subtract_BMS_EMEA__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_before_subtraction_BMS_EMEA__c</fullName>
        <description>VPRO Aug 2014: Total of fees (hourly rates + other fees). Later on this amount could be reduced for Germany.</description>
        <formula>Hourly_honorarium_rate_BMS_EMEA__c * Estimated_Duration_of_Service_hrs__c + Hourly_honorarium_rate_BMS_EMEA__c * Estimated_Preparation_Time_hrs_BMS_EMEA__c + Hourly_travel_time_rate_BMS_EMEA__c * Compensated_Travel_Time_hrs_BMS_EMEA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total before subtraction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_hrs_BMS_EMEA__c</fullName>
        <description>BMS EMEA - Feb Mini LRM 2017 : New Field to Meeting Speaker to calculate the Sum of  Breakdown of the Estimated Duration of Service along with Preparation Time and Compensated Travel Time.</description>
        <formula>((Briefing_mins_BMS_EMEA__c +  Presentation_mins_BMS_EMEA__c +  Chairing_mins_BMS_EMEA__c  +  Q_and_A_mins_BMS_EMEA__c + Post_Meeting_Debrief_mins_BMS_EMEA__c  +  Other_mins_BMS_EMEA__c)/60) +  Estimated_Preparation_Time_hrs_BMS_EMEA__c +  Compensated_Travel_Time_hrs_BMS_EMEA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total (hrs) = Sum of «6 breakdown fields making up ‘Estimated Duration of service (hrs)’ », « Estimated Preparation Time (hrs) » &amp; « Compensated Travel Time (hrs) »</inlineHelpText>
        <label>Total (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Service_BMS_EMEA__c</fullName>
        <description>VPRO March 2014: Type of Service for the Meeting Speaker.</description>
        <label>Type of Service</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_preparation_work_BMS_EMEA__c</fullName>
        <description>VPRO March 2014: Meeting speaker Information.</description>
        <label>Type of preparation work</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Meeting Speaker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Meeting__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MS-{0000}</displayFormat>
        <label>Meeting Speaker BMS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Speakers</pluralLabel>
    <recordTypes>
        <fullName>BMS_EMEA_Meeting_Speakers</fullName>
        <active>true</active>
        <description>VPRO Oct 2013: record type specific for EMEA Speakers</description>
        <label>BMS - EMEA - Meeting Speakers</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_Meeting_Speakers_PostExec</fullName>
        <active>true</active>
        <description>Meeting Speaker related to a Field Force Meeting</description>
        <label>BMS - EMEA - Meeting Speakers PostExec</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_Meeting_Speakers_PostExec_PTA</fullName>
        <active>true</active>
        <description>Meeting Speaker related to a Field Force Meeting</description>
        <label>BMS - EMEA - Meeting Speakers PostExec PTA</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>BMS_EMEA_FFM_DoS_Check</fullName>
        <active>true</active>
        <description>BMS EMEA - Feb Mini LRM 2017 : Validation Rule to check if sum of 6 breakdown fields is equal to Estimated Duration of Service.</description>
        <errorConditionFormula>IF(AND(OR 
(ISBLANK(Estimated_Duration_of_Service_hrs__c), Estimated_Duration_of_Service_hrs__c &lt; 0),
OR(
ISPICKVAL($User.User_Source_Country_BMS_CORE__c , &apos;GB&apos;),
ISPICKVAL($User.User_Source_Country_BMS_CORE__c , &apos;IE&apos;),
ISPICKVAL($User.User_Source_Country_BMS_CORE__c , &apos;UI&apos;))), TRUE,  
AND(OR(
ISPICKVAL($User.User_Source_Country_BMS_CORE__c , &apos;GB&apos;),
ISPICKVAL($User.User_Source_Country_BMS_CORE__c , &apos;IE&apos;),
ISPICKVAL($User.User_Source_Country_BMS_CORE__c , &apos;UI&apos;)),
(Estimated_Duration_of_Service_hrs__c  &lt;&gt; 
ROUND(((Briefing_mins_BMS_EMEA__c + Presentation_mins_BMS_EMEA__c + Chairing_mins_BMS_EMEA__c + Q_and_A_mins_BMS_EMEA__c + Post_Meeting_Debrief_mins_BMS_EMEA__c + Other_mins_BMS_EMEA__c)/60),2))))</errorConditionFormula>
        <errorDisplayField>Estimated_Duration_of_Service_hrs__c</errorDisplayField>
        <errorMessage>Estimated Duration of Service should be equal to SUM of 6 Breakdown Fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMS_EMEA_FFM_Speaker_Co_Author</fullName>
        <active>true</active>
        <description>VPRO 7 March 2014: Validation to not allow a co-author of the meeting to modify any fields.</description>
        <errorConditionFormula>AND(
$User.Id &lt;&gt;   Meeting__r.OwnerId,
TEXT( Meeting__r.FFM_Step_BMS_EMEA__c ) = &apos;Meeting Post-Execution&apos;,
OR( 
$Profile.Name = &apos;BMS - EMEA - REP - MSL&apos;, 
$Profile.Name = &apos;BMS - EMEA - REP - SALES&apos;) 
)</errorConditionFormula>
        <errorMessage>You are not allowed to change any fields as you are co-author of the Meeting.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMS_EMEA_FFM_Speaker_CreateWhileApproval</fullName>
        <active>true</active>
        <description>BMS EMEA Aug 2014: Prevents users from creating a Speaker while the Meeting is pending approval</description>
        <errorConditionFormula>AND( 
ISNEW(), 
ISPICKVAL(Meeting__r.Status_BMS_CORE__c, &apos;Submitted - Waiting Approval&apos;), 
TEXT(Meeting__r.FFM_Step_BMS_EMEA__c ) &lt;&gt; &apos;&apos; 
)</errorConditionFormula>
        <errorMessage>You can add Speaker while the Meeting is waiting for approval. Please cancel and go back to the Meeting page.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMS_EMEA_Meeting_Speaker_Comments_Check</fullName>
        <active>true</active>
        <description>BMS ACN -  September : Q3 GRM 2016 - Prevent users to save a Meeting Speaker which was not delivered without comments.</description>
        <errorConditionFormula>AND (ISPICKVAL(Delivered_BMS_EMEA__c, &quot;No&quot;),  ISBLANK(Comments_BMS_IC__c))</errorConditionFormula>
        <errorDisplayField>Comments_BMS_IC__c</errorDisplayField>
        <errorMessage>Please enter a reason for not delivering the service!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMS_EMEA_Meeting_Speaker_Edit_On_Cancel</fullName>
        <active>true</active>
        <description>BMS ACN - June 2015 - Prevent users from editing meeting speakers records upon cancellation of meeting.</description>
        <errorConditionFormula>Meeting__r.RecordType.DeveloperName == &apos;BMS_EMEA_4_Meeting_Cancelled&apos;</errorConditionFormula>
        <errorMessage>You cannot modify the Speaker of a Cancelled meeting.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMS_EMEA_Meeting_Speaker_Org_Type</fullName>
        <active>true</active>
        <description>BMS ACN - Feb 2016 - Prevent user to create master file if account record type is BMS Organisation.</description>
        <errorConditionFormula>NOT(Account__r.RecordType.DeveloperName=&apos;BMS_Individual&apos;)</errorConditionFormula>
        <errorMessage>Account record type cannot be &quot;Organisation&quot; Type.</errorMessage>
    </validationRules>
</CustomObject>